2010-03-30  Joe Ligman  <joseph.ligman@nokia.com>

Reviewed by Kenneth Rohde Christiansen.

        [Qt] QGraphicsScene mousePressEvent does not set the clickCausedFocus flag
        https://bugs.webkit.org/show_bug.cgi?id=35259

        The clickCausedFocus flag is not being set in method
        mousePressEvent(QGraphicsSceneMouseEvent* ev). This flag is used
        in conjunction with QStyle::RSIP_OnMouseClickAndAlreadyFocused when
        deciding to launch the software input panel.

        * Api/qwebpage.cpp:
        (QWebPagePrivate::mousePressEvent):

git-svn-id: svn://svn.chromium.org/blink/trunk@56805 bbb929c8-8fbe-4397-9dbb-9b2b20218538